<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_fore">

    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="22sp"/>

    <ImageView
        android:src="@drawable/back_but"
        android:onClick="onBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:layout_alignBottom="@id/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:background="@android:color/white">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/icon"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:text="功能"
            android:layout_below="@id/icon"/>
        <TextView
            android:layout_below="@id/feature"
            android:padding="5dp"
            android:layout_marginLeft="40dp"
            android:text="@string/feature_1"
            android:id="@+id/feature_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@id/feature_1"
            android:padding="5dp"
            android:layout_marginLeft="40dp"
            android:text="@string/feature_2"
            android:id="@+id/feature_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@id/feature_2"
            android:padding="5dp"
            android:layout_marginLeft="40dp"
            android:text="@string/feature_3"
            android:id="@+id/feature_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="90dp"
            android:layout_below="@id/feature_3"/>
    </RelativeLayout>
</RelativeLayout>